@@ -1,3 +1,8 @@
+2006-11-14  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py (KickstartHandlers.doIscsi):  Use required
+	attribute.
+
 2006-11-09  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/writer.py (KickstartWriter.doLogging):  Add --level.
